# ai-infra-radar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
config/: radar.yaml
docs/superpowers/plans/: 2026-04-07-additional-source-adapters.md  2026-04-07-huggingface-models.md  2026-04-08-results-ui-github-pages.md  2026-04-13-yaml-manual-github-fetch.md  2026-04-22-disable-automatic-pages-deploy.md  2026-04-22-github-digest-webhook-enrichment.md
docs/superpowers/specs/: 2026-04-06-ai-infra-radar-mvp1-design.md  2026-04-07-additional-source-adapters-design.md  2026-04-07-operations-ui-design.md  (+9 more)
radar/: app.py  cli.py  main.py
radar/alerts/: __init__.py  dispatcher.py  email.py  service.py  webhook.py
radar/core/: config.py  db.py  http_retry.py  models.py  repositories.py  scheduler.py
radar/jobs/: daily_digest.py  gitcode_repos.py  github_burst.py  huggingface_models.py  modelers_models.py  modelscope_models.py  official_pages.py
radar/pages/: __init__.py  export.py
radar/reports/: builder.py  enrichment.py  summarization.py
radar/ui/: app.js  index.html  styles.css
tests/: conftest.py  test_app.py
tests/alerts/: test_dispatcher.py  test_webhook.py
tests/api/: test_alerts.py  test_config.py  test_feed.py  test_health.py  test_jobs.py  test_ops_github.py  test_reports.py  test_ui.py
tests/core/: test_config.py  test_repositories.py  test_utcdatetime.py
tests/fixtures/: minimal.yaml
tests/jobs/: test_daily_digest.py
tests/pages/: test_export.py
tests/reports/: test_summarization.py
tests/smoke/: test_mvp_paths.py
(+41 files in other folders)
